--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.1
+  flappy_search_bar: ^1.7.2
+  url_launcher: ^5.4.10
 
 
   # The following adds the Cupertino Icons font to your application.
