--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.1
   flappy_search_bar: ^1.7.2
   url_launcher: ^5.4.10
+  fluttertoast: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
