--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flappy_search_bar: ^1.7.2
   url_launcher: ^5.4.10
   fluttertoast: ^4.0.1
+  image_picker: ^0.6.7
+  flutter_email_sender: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
