--- a/app/android/app/src/main/AndroidManifest.xml
+++ b/app/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
        <uses-permission android:name="android.permission.INTERNET" /> 
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="app"
+        android:label="Music-able"
         android:icon="@mipmap/ic_launcher">
         
         <activity
